# agent-rs

./: .env.example  .gitignore  AGENTS.md  ARCHITECTURE.md  Cargo.toml  README.md  demo_task.txt
config/: default.toml
examples/: demo.md  repo_scan_task.txt
src/: app.rs  cli.rs  config.rs  error.rs  lib.rs  logging.rs  main.rs
src/domain/: chunk.rs  citation.rs  document.rs  mod.rs  section.rs  workspace.rs
src/index/: mod.rs  simple_index.rs
src/ingest/: markdown.rs  mod.rs  pdf.rs  text.rs
src/llm/: mock.rs  mod.rs  openai.rs  provider.rs
src/parser/: structure.rs
src/retrieval/: retriever.rs
src/storage/: workspace_store.rs
src/synthesis/: synthesizer.rs
src/utils/: text.rs
